--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500;700&display=swap');
 
+    body {
+      margin: 0
+    }
     /* General Container Styling */
     #container {
       height: 100vh;
@@ -34,7 +37,7 @@
       justify-content: center;
       align-items: center;
       height: 300px;
-      background-image: url("https://www.pharmacist.com/Portals/0/EasyDNNNews/2158/images/Liu-for-p.com-600-600-p-L-97.jpg");
+      background-image: url("Liu-for-p.com-600-600-p-L-97.jpg");
       background-size: cover;
       background-position: center;
       background-size: 80%;
